--- a/flex/style.css
+++ b/flex/style.css
@@ -15,19 +15,29 @@ body {
 .container {
   border: 0.3rem solid black; /*0.3rem -> 3 piexeles*/
   display: flex;
+  /*align-items: baseline;*/
+  /*height: 50vh;*/ /*50vh -> 50 % de la pantalla*/
+  flex-wrap: wrap;
+  
 }
 
 .box {
-  width: 10rem; /*10rem -> 100 pixeles*/
+  /*width: 10rem;*/ /*10rem -> 100 pixeles*/
   height: 10rem;
+  flex-basis: 10rem;
+  flex-grow: 1;
 }
 
 .box1 {
   background-color: blue;
+  /* order: 1; */
+  /* flex-grow: 1; */
 }
 
 .box2 {
   background-color: blueviolet;
+  /* order: 3; */
+  /* flex-grow: 1; */
 }
 
 .box3 {
@@ -40,8 +50,10 @@ body {
 
 .box5 {
   background-color: darkgreen;
+  /* order: 4; */
 }
 
 .box6 {
   background-color: fuchsia;
-}
+  /* order: 2;*/
+} 
